refactoring datasets securityConfiguration