@@ -16,7 +16,6 @@ package org.shanoir.ng.configuration.security;
 
 import java.util.Collection;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.shanoir.ng.dicom.web.STOWRSMultipartRequestFilter;
 import org.shanoir.ng.utils.MDCFilter;
@@ -26,10 +25,10 @@ import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -71,26 +70,40 @@ public class SecurityConfiguration {
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    @Order(1)
+    public SecurityFilterChain publicFilterChain(HttpSecurity http) throws Exception {
+        http
+                .securityMatcher(
+                        "/swagger-ui.html",
+                        "/swagger-ui/**",
+                        "/api-docs/**",
+                        "/datasets/overallStatistics")
+                .csrf(AbstractHttpConfigurer::disable)
+                .authorizeHttpRequests(auth -> auth.anyRequest().permitAll());
+
+        return http.build();
+    }
+
+    @Bean
+    @Order(2)
+    public SecurityFilterChain securedFilterChain(HttpSecurity http) throws Exception {
         http
                 .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .csrf(AbstractHttpConfigurer::disable)
                 .addFilterAfter(mdcFilter, FilterSecurityInterceptor.class)
                 .addFilterAfter(multipartRelatedRequestFilter, FilterSecurityInterceptor.class)
-                .authorizeHttpRequests(
-                    matcher -> matcher.requestMatchers("/swagger-ui.html", "/swagger-ui/**", "/api-docs/**")
-                        .permitAll()
-                    .anyRequest()
-                        .authenticated()
-                )
+                .authorizeHttpRequests(auth -> auth
+                        .anyRequest().authenticated())
                 .oauth2ResourceServer(oauth2Configurer -> oauth2Configurer.jwt(jwtConfigurer -> jwtConfigurer.jwtAuthenticationConverter(jwt -> {
-                    Map<String, Collection<String>> realmAccess = jwt.getClaim("realm_access"); // manage Keycloak specific JWT structure here
+                    // manage Keycloak specific JWT structure here
+                    Map<String, Collection<String>> realmAccess = jwt.getClaim("realm_access");
                     Collection<String> roles = realmAccess.get("roles");
-                    var grantedAuthorities = roles.stream()
-                            .map(role -> new SimpleGrantedAuthority(role))
-                            .collect(Collectors.toList());
-                    return new JwtAuthenticationToken(jwt, grantedAuthorities);
+                    var authorities = roles.stream()
+                            .map(SimpleGrantedAuthority::new)
+                            .toList();
+                    return new JwtAuthenticationToken(jwt, authorities);
                 })));
+
         return http.build();
     }
 
@@ -108,14 +121,4 @@ public class SecurityConfiguration {
         return bean;
     }
 
-    /**
-     * Web security customizer to allow public access to overall statistics endpoint.
-     * @return
-     */
-    @Bean
-    public WebSecurityCustomizer webSecurityCustomizer() {
-        return (web) -> web.ignoring().requestMatchers(
-            "/datasets/overallStatistics"
-        );
-    }
 }
